# dialop

./: .gitignore  README.md  pyproject.toml
dialop/: .api_key  evaluate.py  planning_query_executor.py  play.py  play_gpt3.py  players.py  templates.py  utils.py
dialop/apps/: app.py  s3_json_bucket.py  server_state.py
dialop/apps/mediation/static/: client.js  main.css
dialop/apps/mediation/templates/: game.html  index.html
dialop/apps/optimization/static/: client.js  main.css
dialop/apps/optimization/templates/: game.html  index.html
dialop/apps/planning/static/: client.js  main.css  map.js  travel_data.yaml
dialop/apps/planning/templates/: game.html  index.html
dialop/envs/: __init__.py  base_env.py  mediation.py  optimization.py  planning.py  wrappers.py
dialop/envs/data/: mediation_agent.txt  mediation_user.txt  optimization.txt  planning_agent.txt  planning_user.txt
dialop/games/: __init__.py  base_game.py  mediation.py  mediation_data.py  optimization.py  planning.py  planning_data.py
dialop/games/data/: locations.geojson
dialop/prompts/: mediation_agent.txt  mediation_user0.txt  mediation_user1.txt  optimization.txt  planning_agent.txt  planning_user.txt
